--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=aimodels
 spring.ai.groq.api-key=${GROQ_API_KEY}
 spring.ai.groq.base-url=https://api.groq.com/openai/v1
+#spring.ai.openai.enabled=false
+#spring.ai.openai.chat.enabled=false
+#spring.ai.openai.embedding.enabled=false
+#spring.ai.openai.image.enabled=false
+#spring.ai.openai.speech.enabled=false
+spring.ai.openai.api-key=dummy
